--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   background-image: url(./images/mobileImages/header-illsutration-mobile.svg);
   height: 100vh;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -222,6 +222,9 @@
   align-items: center;
   gap: 2rem;
   padding: 2rem;
+  background-image: url('./images/mobileImages/contackbackground.svg');
+  background-repeat: no-repeat;
+  background-position: right calc(100% - 120px);
 }
 
 .contact h3 {
