--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   overflow-x: hidden;
 }
 
+.navbar ul {
+  display: none;
+}
+
 .about {
   background-image: url(./images/mobileImages/header-illsutration-mobile.svg);
   height: 100vh;
@@ -19,7 +23,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0 5vw;
   gap: 2rem;
 }
 
@@ -29,8 +33,7 @@ body {
   font-weight: 700;
   line-height: 1.2;
   text-align: center;
-  max-width: 327px;
-  margin-bottom: 1rem;
+  max-width: 20rem;
 }
 
 .about h1 span {
@@ -41,9 +44,9 @@ body {
   color: #172b4d;
   font-size: 1.25rem;
   font-weight: 400;
-  line-height: 1.75;
+  line-height: 1.6;
   text-align: center;
-  max-width: 500px;
+  max-width: 30rem;
 }
 
 .about ul,
@@ -61,14 +64,21 @@ body {
   gap: 4rem;
 }
 
+.projectContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 4rem;
+}
+
 .projects h3 {
   font-weight: 700;
   font-size: 2.5rem;
   line-height: 1.2;
-  max-width: 327px;
+  max-width: 20rem;
   text-align: center;
   color: #172b4d;
   position: relative;
+  margin-top: 3rem;
 }
 
 .projects h3::after {
@@ -119,7 +129,7 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  max-width: 300px;
+  max-width: 20rem;
   flex-basis: 100%;
 }
 
@@ -163,7 +173,7 @@ body {
   padding: 6rem 1rem 2rem 1rem;
   background-image: url('./images/mobileImages/aboutbackground.svg');
   background-repeat: no-repeat;
-  background-position: right 50px;
+  background-position: right 5vw;
 }
 
 .about-details {
@@ -240,7 +250,7 @@ body {
   padding: 2rem;
   background-image: url('./images/mobileImages/contackbackground.svg');
   background-repeat: no-repeat;
-  background-position: right calc(100% - 120px);
+  background-position: right calc(100% - 12vw);
 }
 
 .contact h3 {
@@ -283,7 +293,7 @@ body {
 
 .cardDetails button:hover,
 .about-details button:hover {
-  box-shadow: 0 8px 16px 0 rgba(54, 179, 127, 0.24);
+  box-shadow: 0 0.5rem 1rem rgba(54, 179, 127, 0.24);
 }
 
 .about-details button:active,
@@ -293,5 +303,138 @@ body {
 }
 
 .contact form button:hover {
-  box-shadow: 0 8px 16px 0 rgba(54, 179, 127, 0.24);
+  box-shadow: 0 0.5rem 1rem rgba(54, 179, 127, 0.24);
+}
+
+@media screen and (min-width:768px) {
+
+  .navbar ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+  }
+
+  .navbar ul li a {
+    text-decoration: none;
+    color: #172b4d;
+    font-weight: 600;
+  }
+
+  .about {
+    position: relative;
+    background-image: url(./images/desktopImages/Header-llustration-desktop.svg);
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+}
+
+.about h1 {
+  max-width: 35rem;
+}
+
+.about p {
+  max-width: 37rem;
+}
+
+.projects h3 {
+    max-width: none;
+}
+
+.projectContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.card {
+  max-width: 369px;
+  max-height: 474px;
+  position: relative;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
+}
+.cardDetails {
+  gap: 1rem;
+}
+
+.cardDetails button {
+  position: relative;
+  margin: 0;
+  bottom: -25px;
+}
+
+.about-details p, .contact p {
+max-width: 920px;
+}
+
+.skills-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.tech-skills {
+  max-width: 369px;
+  max-height: 316px;
+  padding: 2rem 1rem;
+}
+
+.about-skills {
+  background-image: url(./images/desktopImages/aboutdesktopfirst.svg);
+  background-repeat: no-repeat;
+  background-position: right 5vw;
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  max-width: none;
+}
+.contact p {
+ display: none;
+}
+
+.contact {
+  display: flex;
+  flex-direction: row;
+  background-image: url(./images/desktopImages/contactfirst.svg);
+  background-repeat: no-repeat;
+  background-position: right calc(100% + 4vw);
+  align-items: center;
+  justify-content: center;
+}
+
+.contact h3 {
+  max-width: 463px;
+  max-height: 256px;
+  font-size: 30px;
+}
+
+.contact form {
+  width: 50%;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.footer hr {
+  width: 100%;
+  height: 1px;
+  background-color: #d0d9d4;
+  border: none;
+}
+
+
 }
