--- a/style.css
+++ b/style.css
@@ -306,8 +306,20 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(54, 179, 127, 0.24);
 }
 
-@media screen and (min-width:768px) {
+.footer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
+}
 
+.footer hr {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
   .navbar ul {
     display: flex;
     flex-direction: row;
@@ -331,110 +343,112 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
-}
+  }
 
-.about h1 {
-  max-width: 35rem;
-}
+  .about h1 {
+    max-width: 35rem;
+  }
 
-.about p {
-  max-width: 37rem;
-}
+  .about p {
+    max-width: 37rem;
+  }
 
-.projects h3 {
+  .projects h3 {
     max-width: none;
-}
+  }
 
-.projectContainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  gap: 1rem;
-  padding: 1rem;
-}
+  .projectContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 1rem;
+    padding: 1rem;
+  }
 
-.card {
-  max-width: 369px;
-  max-height: 474px;
-  position: relative;
-  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
-}
-.cardDetails {
-  gap: 1rem;
-}
+  .card {
+    max-width: 369px;
+    max-height: 474px;
+    position: relative;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
+  }
 
-.cardDetails button {
-  position: relative;
-  margin: 0;
-  bottom: -25px;
-}
+  .cardDetails {
+    gap: 1rem;
+  }
 
-.about-details p, .contact p {
-max-width: 920px;
-}
+  .cardDetails button {
+    position: relative;
+    margin: 0;
+    bottom: -25px;
+  }
 
-.skills-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
+  .about-details p,
+  .contact p {
+    max-width: 920px;
+  }
 
-.tech-skills {
-  max-width: 369px;
-  max-height: 316px;
-  padding: 2rem 1rem;
-}
+  .skills-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
-.about-skills {
-  background-image: url(./images/desktopImages/aboutdesktopfirst.svg);
-  background-repeat: no-repeat;
-  background-position: right 5vw;
-}
+  .tech-skills {
+    max-width: 369px;
+    max-height: 316px;
+    padding: 2rem 1rem;
+  }
 
-.skills {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  max-width: none;
-}
-.contact p {
- display: none;
-}
+  .about-skills {
+    background-image: url(./images/desktopImages/aboutdesktopfirst.svg);
+    background-repeat: no-repeat;
+    background-position: right 5vw;
+  }
 
-.contact {
-  display: flex;
-  flex-direction: row;
-  background-image: url(./images/desktopImages/contactfirst.svg);
-  background-repeat: no-repeat;
-  background-position: right calc(100% + 4vw);
-  align-items: center;
-  justify-content: center;
-}
+  .skills {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    max-width: none;
+  }
 
-.contact h3 {
-  max-width: 463px;
-  max-height: 256px;
-  font-size: 30px;
-}
+  .contact p {
+    display: none;
+  }
 
-.contact form {
-  width: 50%;
-}
+  .contact {
+    display: flex;
+    flex-direction: row;
+    background-image: url(./images/desktopImages/contactfirst.svg);
+    background-repeat: no-repeat;
+    background-position: right calc(100% + 4vw);
+    align-items: center;
+    justify-content: center;
+  }
 
-.footer {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 1rem;
-}
+  .contact h3 {
+    max-width: 463px;
+    max-height: 256px;
+    font-size: 30px;
+  }
 
-.footer hr {
-  width: 100%;
-  height: 1px;
-  background-color: #d0d9d4;
-  border: none;
-}
+  .contact form {
+    width: 50%;
+  }
 
+  .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
+  }
 
+  .footer hr {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #d0d9d4;
+    border: none;
+  }
 }
