--- a/style.css
+++ b/style.css
@@ -27,6 +27,69 @@ body {
   gap: 2rem;
 }
 
+.seeProject {
+  display: none;
+  padding: 2rem;
+}
+
+.seeProject-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  border-radius: 16px;
+  padding: 0.6rem;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgb(54, 179, 126);
+  position: relative;
+}
+
+.middle-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.middle-container ul {
+  display: flex;
+  list-style-type: none;
+  gap: 1rem;
+  font-weight: 600;
+}
+
+.bottom-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-bottom: 1rem;
+}
+
+.project-buttons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.top-container img {
+  width: 100%;
+  border-radius: 14px;
+}
+
+.cancelBtn-container {
+  display: block;
+  position: absolute;
+  padding: 1rem;
+  top: 0;
+  right: 50%;
+  transform: translate(50%);
+  background-color: red;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+}
+
+.cancel-button {
+  width: 20px;
+}
+
 .about h1 {
   color: #172b4d;
   font-size: 2.5rem;
@@ -37,7 +100,7 @@ body {
 }
 
 .about h1 span {
-  color: #36b37e;
+  color: rgb(54, 179, 126);
 }
 
 .about p {
@@ -133,7 +196,8 @@ body {
   flex-basis: 100%;
 }
 
-.skills li {
+.skills li,
+.middle-container ul li {
   color: #36b37e;
   background-color: #fff;
   padding: 0.75rem 0.625rem;
@@ -141,6 +205,10 @@ body {
   line-height: 1.33;
   letter-spacing: 0.03em;
   font-weight: 600;
+}
+
+.middle-container ul li {
+  background-color: #d0d9d4;
 }
 
 .cardDetails ul li {
@@ -200,7 +268,8 @@ body {
   text-align: center;
 }
 
-.about-details button {
+.about-details button,
+.bottom-container button {
   padding: 0.75rem 0.625rem;
   color: #fff;
   background-color: #36b37e;
@@ -217,7 +286,7 @@ body {
   margin-top: 4rem;
   gap: 1rem;
 }
-                                           
+
 .tech-skills {
   display: flex;
   flex-direction: column;
@@ -227,7 +296,7 @@ body {
   background-color: #ebf0ee;
   border: none;
   border-radius: 5px;
-  box-shadow: -4px 3px 12px green
+  box-shadow: -4px 3px 12px green;
 }
 
 .tech-skills img {
@@ -371,7 +440,6 @@ body {
     max-height: 474px;
     position: relative;
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
-    position: relative;
   }
 
   .cardDetails {
@@ -391,7 +459,7 @@ body {
 
   .skills-container {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .tech-skills {
@@ -446,5 +514,19 @@ body {
     height: 1px;
     background-color: #d0d9d4;
     border: none;
+  }
+
+  .top-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .top-container img {
+    max-width: 872px;
+    max-height: 616px;
+  }
+
+  .middle-container {
+    display: flex;
   }
 }
