--- a/style.css
+++ b/style.css
@@ -116,7 +116,6 @@ body {
   color: rgb(54, 179, 126);
 }
 
-
 .about p {
   color: #172b4d;
   font-size: 1.25rem;
@@ -179,6 +178,7 @@ body {
 
 .card img {
   height: 19.375rem;
+
   /* 310px */
   width: 100%;
   object-fit: cover;
@@ -258,7 +258,6 @@ body {
   100% {
     transform: rotate(360deg);
   }
-
 }
 
 .about-skills {
@@ -326,15 +325,20 @@ body {
   animation: firefly 1s infinite;
 }
 
+.project-buttons a {
+  display: block;
+  text-decoration: none;
+  width: 100%;
+}
+
 @keyframes firefly {
   0% {
-    box-shadow: 0px 0px 0px green;
+    box-shadow: 0 0 0 green;
   }
 
   100% {
-    box-shadow: 0px 0px 7px green;
+    box-shadow: 0 0 7px green;
   }
-
 }
 
 .tech-skills img {
@@ -469,15 +473,15 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
-    gap: 1rem;
     padding: 1rem;
+    grid-column-gap: 1rem;
   }
 
   .card {
     max-width: 369px;
-    max-height: 474px;
     position: relative;
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
+    padding-bottom: 2rem;
   }
 
   .cardDetails {
@@ -485,7 +489,7 @@ body {
   }
 
   .cardDetails button {
-    position: relative;
+    position: absolute;
     margin: 0;
     bottom: -25px;
   }
@@ -584,8 +588,7 @@ body {
   .bottom-container {
     display: flex;
     flex-direction: row;
-    padding-bottom: 1rem;
-    padding: 0 1rem;
+    padding: 0 1rem 2rem;
   }
 
   .project-buttons {
@@ -596,5 +599,4 @@ body {
     width: 135px;
     height: 50px;
   }
-
 }
